--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
         }
         else if (enteredUsername === "cookieduck" && enteredPassword === "games") {
             const embeddedSite = document.getElementById('content');
-            embeddedSite.src = "https://learningstudio.uk/games.html"
+            embeddedSite.src = "https://learningstudio.uk/games.html";
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
         else if (enteredUsername === "shuttle" && enteredPassword === "proxy") {
             alert("WARNING: This proxy uses other websites to get your website data across. This means that websites pop up when you click things sometimes. Are you sure you want to continue?")
             const embeddedSite = document.getElementById('content');
-            embeddedSite.src = "https://polish.lat"
+            embeddedSite.src = "https://polish.lat";
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
         else if (enteredUsername === "surfskip" && enteredPassword === "proxyy") {
             const embeddedSite = document.getElementById('content');
-            embeddedSite.src = "http://199.188.117.34.bc.googleusercontent.com/app"
+            embeddedSite.src = "http://199.188.117.34.bc.googleusercontent.com/app";
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
