--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
-        else if (enteredUsername === "surfskip" && enteredPassword === "proxyy") {
+        else if (enteredUsername === "surfskip" && enteredPassword === "proxy") {
             const embeddedSite = document.getElementById('content');
-            embeddedSite.src = "http://199.188.117.34.bc.googleusercontent.com/app";
+            embeddedSite.src = "https://easyword.shop/app";
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
