--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
         else if (enteredUsername === "surfskip" && enteredPassword === "proxy") {
             const embeddedSite = document.getElementById('content');
-            embeddedSite.src = "https://easyword.shop/app";
+            embeddedSite.src = "https://excelhub.space/app";
             document.querySelector(".container").style.display = "none";
             document.getElementById("content").style.display = "block";
         }
